k8s/monitoring/grafana/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-stripprefix
  namespace: devquote
spec:
  stripPrefix:
    prefixes:
      - /grafana
